--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                     case 1:
                         menu = parseInt(prompt("1. Asado al horno con papas fritas $" + asado + "\n2. Milanesa con pure $" + milanesa + "\n3. Bife de chorizo con papas fritas $" + bife));
 
-                        switch (menu) {
+                        switch (menu) 
+                        {
                             case 1:
                                 cantidad = parseInt(prompt("ingrese numero de pociones"));
                                 total = "El precio total es $ " + cantidad * asado;
@@ -123,7 +124,8 @@
                     case 2:
                         menu = parseInt(prompt("1. pollo al horno con papas fritas $" + polloHorno + "\n2. Pechuga a la mostaza $" + pechugaMostaza + "\n3. Pollo al disco $" + polloDisco));
 
-                        switch (menu) {
+                        switch (menu) 
+                        {
                             case 1:
                                 cantidad = parseInt(prompt("ingrese numero de pociones"));
                                 total = "El precio total es $ " + cantidad * polloHorno;
@@ -147,7 +149,8 @@
 
                     case 3:
                         menu = parseInt(prompt("1. Zorrentinos con salsa blanca $" + zorrentinosSalsaBlanca + "\n2. Ñoquis con boloñesa $" + ñoquisBoloñesa + "\n3. Ravioles con salsa parisienne $" + raviolesParisienne));
-                        switch (menu) {
+                        switch (menu) 
+                        {
                             case 1:
                                 cantidad = parseInt(prompt("ingrese numero de pociones"));
                                 total = "El precio total es $ " + cantidad * zorrentinosSalsaBlanca;
@@ -172,7 +175,8 @@
                     case 4:
                         menu = parseInt(prompt("1. Milanesa de surubi $" + milanesaSurubi + "\n2. Filet de merluza con pure de papas $" + filetMerluza + "\n3. Pejerrey con salsa de roquefort $" + pejerreyRoquefort));
 
-                        switch (menu) {
+                        switch (menu)
+                         {
                             case 1:
                                 cantidad = parseInt(prompt("ingrese numero de pociones"));
                                 total = "El precio total es $ " + cantidad * milanesaSurubi;
