--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     default:
                         console.log("Ingrese por favor un numero de la lista");
                 }
-                opciones = parseInt(prompt("1-Carnes\n2-Pollo\n3-Pasta\n4-pescado\n5. Precio Final\n6. Salir"));
+                opciones = parseInt(prompt("1-Carnes\n2-Pollo\n3-Pasta\n4-pescado\n5. Salir"));
             }
 
             opciones = parseInt(prompt("Ahora vamos a poder comprar!!!!\n1-Carnes\n2-Pollo\n3-Pasta\n4-pescado\n5. Salir "));
