--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             let menu;
 
-            let asado = 1700, milanesa = 1100, bife = 1300, polloHorno = 1000, pechugaMostaza = 1100,
+            const asado = 1600, milanesa = 1100, bife = 1300, polloHorno = 1000, pechugaMostaza = 1100,
 
                 polloDisco = 1100, zorrentinosSalsaBlanca = 1500, ñoquisBoloñesa = 1300, raviolesParisienne = 1600,
 
@@ -82,7 +82,7 @@
                     default:
                         console.log("Ingrese por favor un numero de la lista");
                 }
-                opciones = parseInt(prompt("1-Carnes\n2-Pollo\n3-Pasta\n4-pescado\n5. Salir"));
+                opciones = parseInt(prompt("1-Carnes\n2-Pollo\n3-Pasta\n4-pescado\n5. git aSalir"));
             }
 
             opciones = parseInt(prompt("Ahora vamos a poder comprar!!!!\n1-Carnes\n2-Pollo\n3-Pasta\n4-pescado\n5. Salir "));
